# Gear

./: .gitignore  Cargo.toml  README.md
Libgear/: Cargo.toml  build.rs
Libgear/src/: cosnts.rs  functions.rs  lib.rs  shader.rs  types.rs
example/: Cargo.toml
example/src/: example1.rs
examples/: 1-Window.rs
examples/new_window/: Cargo.toml  build.rs
examples/new_window/src/: main.rs
src/: lib.rs  shader.rs
src/Log/: mod.rs
src/Math/: mod.rs  vertex.rs
src/Sprite/: mod.rs
src/math/: mod.rs  vertex.rs
src/sprite/: mod.rs
