[package]
name = "fish"
version = "0.1.0"
edition = "2021"
author = ["KeyCap Studio<www.keycapstudio.io>", "LocalTash <@Local-Trash>"]
description = "A ECS game engine, made for making easy pc games"
license-file = "LICENSE"
repository = "https://github.com/Local-Trash/Fish/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { git = "https://github.com/godot-rust/gdextension", branch = "master" }

[lib]
crate-type = ["cdylib"]