[package]
name = "gear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
wgpu = "*"
pollster = "*"

[lib]
name = "gear"
crate-type = ["cdylib"]

# Makes testing easier
[profile.dev]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false