[package]
name = "gear"
version = "0.1.0"
edition = "2021"

[build-dependencies]
gl_generator = "0.14.0"

[lib]
name = "gear"
crate-type = ["cdylib"]

# Makes testing easier
[profile.dev]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false